# shelld

./: .gitignore  Cargo.toml  flake.nix
src/: client.rs  main.rs  server.rs
