[package]
name = "shelld"
version = "0.1.0"
edition = "2024"

[dependencies]

hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
hyper-tungstenite = "0.18.0"
futures = "0.3.31"
thiserror = "2.0.16"
clap = { version = "4.5", features = ["derive"] }
